src/theme/_blog.scss
deckgo-highlight-code {
	border: 0.45rem solid black;

	--deckgo-highlight-code-carbon-toolbar-display: none;
	--deckgo-highlight-code-carbon-header-padding: 8px;
	--deckgo-highlight-code-carbon-border-radius: 1px;
	--deckgo-highlight-code-font-size: 0.9em;
	--deckgo-highlight-code-line-height: 1em;
	--deckgo-highlight-code-scroll: hidden;
}

p code {
	font-family: Menlo, monospace;
	background: rgba(0, 0, 0, 0.05);
	padding: 0.25rem 0.45rem;
}

blockquote {
	box-shadow: black 3px 0 0 0 inset;
	padding-left: 0.75rem;
	margin: 1.25rem 0;
	font-style: italic;
}

article p:first-child img {
	box-shadow: 3px 3px black;
	border: 1px solid black;
	border-radius: 1px;
}

p img {
	margin: 1.25rem auto 3.75rem;
	display: block;

	max-width: 100%;

	@media screen and (min-width: 960px) {
		max-width: 960px;
	}
}

article ol,
article ul {
	padding: 0 0.5rem;

	li {
		padding: 0;

		&:last-child {
			padding: 0 0 0.75rem;
		}
	}
}

article h3 {
	padding: 1.5rem 0.5rem 0;
}

article h4 {
	padding: 0.5rem;
}

